Fix horizontal scrolling bug

--- a/indapot/assets/css/main.scss
+++ b/indapot/assets/css/main.scss
@@ -74,7 +74,7 @@ section header, section main {
   border: 0;
   padding: 0;
   background: transparent;
-  overflow: auto;
+  overflow: hidden;
 
   text-align: left;
 }
